--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="col-lg-8 col-md-12 col-xs-12 text-center">
                     <div class="heading-count">
                         <h2>COMING SOON</h2>
-                        <p class="text-light">A website that will change everything ...</p>
+                        <p class="text-light">Under Construction !!!</p>
                     </div>
                 </div>
                 <div class="col-lg-8 col-md-12 col-xs-12">
