--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-md-12 col-xs-12 text-center">
                     <div class="heading-count">
+                        <h1>MapNep.Com</h1>
                         <h2>COMING SOON</h2>
                         <p class="text-light">Under Construction !!!</p>
                     </div>
