--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-md-12 col-xs-12 text-center">
                     <div class="heading-count">
-                        <h1>MapNep.Com</h1>
+                        <h1><em>MapNep.Com</em></h1>
+                        <br/>
                         <h2>COMING SOON</h2>
                         <p class="text-light">Under Construction !!!</p>
                     </div>
