--- a/index.html
+++ b/index.html
@@ -164,7 +164,10 @@ h3{
 		<code id="name"><span style="font-weight:lighter;color:green;font-size:25px; text-align:center;">><span id="blink">_</span>bikram_paudel</span></code>	
 	<div id="introduction"class="about">
 		<h2><i class="fas fa-handshake"></i> Introduction</h2>
-		<p style="margin:5px;">Seeking opportunities to learn and work into a hardworking and honest professional, contributing meaningfully and effectively to the success of the organization whereas at the same time boost knowledge to wide personal skills. I want to get involved and use my time best to learn and earn. Other than coding, I also like watching movies. Sci-fi and Horror are my genre. Some of my interests are developing web apps and software, designing database, practicing Agile methodology in team, learning new tools and trends in tech industry, researching and data collecting. I also have keen interest in Astronomy. Well, who doesn't like stars. </p>
+		<p style="margin:5px;">Knowledge of multiple programming languages and web development frameworks with experience of working 
+			at Healthcare, Education and Telecommunication industries. My interests are developing web apps and software, designing 
+			database, researching/learning new tools and trend in tech industry, data collecting and practicing agile methodology in 
+			a team. I also have keen interest in Astronomy. Well, who doesn't like stars. </p>
 		<h2>
 			<a style="margin:0px 20px 0px 0px; color:blueviolet;" href="https://github.com/bpaudel2"><i class="fab fa-github"></i></a>
 			<a style="margin:0px 20px 0px 20px;color:blueviolet;"href="https://www.linkedin.com/in/bikram-paudel-481908a2/"><i class="fab fa-linkedin"></i></a>
