--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@ h3{
 	<div id="introduction"class="about">
 		<h2><i class="fas fa-handshake"></i> Introduction</h2>
 		<p style="margin:5px;">Knowledge of multiple programming languages and web development frameworks with experience of working 
-			at Healthcare, Education and Telecommunication industries. My interests are developing web apps and software, designing 
-			database, researching/learning new tools and trend in tech industry, data collecting and practicing agile methodology in 
+			at Healthcare, Education and Telecommunication industries. My interests are developing web apps and softwares, designing 
+			database, researching/learning new tools and trends in tech industry, data collecting and practicing agile methodology in 
 			a team. I also have keen interest in Astronomy. Well, who doesn't like stars. </p>
 		<h2>
 			<a style="margin:0px 20px 0px 0px; color:blueviolet;" href="https://github.com/bpaudel2"><i class="fab fa-github"></i></a>
@@ -179,10 +179,10 @@ h3{
 	<div id="skills"class="skills">
 		<h2> <i class="fas fa-toolbox"></i> My Skills</h2>
 		<div style="margin-left:25px;text-align:left;display:grid;">
-			<span><h3 style="display: inline">Languages:</h3><p style="display: inline">JavaScript, Java, C++, SQL, Python, HTML, CSS, TypeScript, Prolog, C#, VBA</p></span>
-			<span><h3 style="display: inline">Frameworks:</h3><p style="display: inline">Node.js, Express.js, EJS, Jade, Angular, Bootstrap, .NET Core, jQuery, Flask</p></span>
-			<span><h3 style="display: inline">Databases:</h3><p style="display: inline">PostgreSQL, MySQL, Oracle, SQL Server, MongoDB, MSSQL</p></span>
-			<span><h3 style="display: inline">ORM:</h3><p style="display: inline">Hibernate, Entity, SQL Alchemy, Mongoose(ODM)</p></span>
+			<span><h3 style="display: inline">Languages:</h3><p style="display: inline">JavaScript, Java, C#, VBA, SQL, Python, C++, HTML, CSS, TypeScript, Prolog</p></span>
+			<span><h3 style="display: inline">Frameworks:</h3><p style="display: inline">Node.js, Express.js, EJS, Jade, Angular, Bootstrap, .NET Core, ASP.NET, jQuery, Flask, Razor Pages</p></span>
+			<span><h3 style="display: inline">Databases:</h3><p style="display: inline">MSSQL, PostgreSQL, MySQL, Oracle, MongoDB</p></span>
+			<span><h3 style="display: inline">ORM:</h3><p style="display: inline">Entity, Hibernate, SQL Alchemy, Mongoose(ODM)</p></span>
 			<span><h3 style="display: inline">Cloud Computing Platforms:</h3><p style="display: inline">Microsoft Azure</p></span>
             <span><h3 style="display: inline">Development Tools:</h3><p style="display: inline">Git, GitHub, GitLab, Visual Studio, Eclipse, NetBeans, IntelliJ IDEA, Jypter Notebook, Spyder</p></span>
             <br>
@@ -202,8 +202,11 @@ h3{
 				<p>
 				<a style="color:rgb(0, 132, 255);"href="https://www.google.com/maps/place/9020+N+May+Ave+%23140,+Oklahoma+City,+OK+73120/@35.562602,-97.5679622,17z/data=!3m1!4b1!4m5!3m4!1s0x87b21ba728aa5b29:0xb4f9662d1826c54e!8m2!3d35.562602!4d-97.5657735">Revenue Management Solutions, 9020 N May Ave #140, Oklahoma City, OK 73120</a>
 				</p>
-				<p>Fixing, Improving and Writing Programs; Development Team </p>
-				<p>Fixing bugs, Writing or Improving existing programs in JAVA, .NET and VB</p>				
+				<p>Fixing, Improving and Building New Applications; Development Team </p>
+				<ul>
+					<li>Building/Maintaining Applications in JAVA, VB, and C#(ASP.NET and .NET Core)</li>
+					<li>Building/Maintaining Web Applications using HTML, CSS, JavaScript, and RazorPages.</li>
+				</ul>
 			</div>
 			<div>
 				<h3><i style="color:powderblue;" class="far fa-edit"></i>DevOps Engineer <span><small style="color:#818181">Jan 2019-Jun 2019</small></span></h3>
@@ -211,8 +214,12 @@ h3{
 				<a style="color:rgb(0, 132, 255);"href="https://www.google.com/maps/place/9020+N+May+Ave+%23140,+Oklahoma+City,+OK+73120/@35.562602,-97.5679622,17z/data=!3m1!4b1!4m5!3m4!1s0x87b21ba728aa5b29:0xb4f9662d1826c54e!8m2!3d35.562602!4d-97.5657735">Revenue Management Solutions, 9020 N May Ave #140, Oklahoma City, OK 73120</a>
 				</p>
 				<p>Automating, Deploying and Troubleshooting; DevOps Team</p>
-				<p>Troubleshooting production issues, Deploying Java Applications, Monitoring Servers, Writing CI CD pipeline using GitLab and Ansible and Creating or Improving existing scripts in SQL, JS, bash and Python for internal websites and maintenance purpose</p>
-				
+				<ul>
+					<li>Deploying Applications( Java and .NET ) to Production Server</li>
+					<li>Monitoring Servers and Applications, and Troubleshooting Production issues</li>
+					<li>Creating/Improving scripts in SQL, JS, Python, and Shell for automation and maintenance</li>
+					<li>Implementing CI CD Pipeline using GitLab and Ansible</li>
+				</ul>				
 			</div>
 			<div>
 				<h3><i style="color:powderblue;" class="far fa-edit"></i>Summer Intern <span><small style="color:#818181">Jun 2018-Aug 2018</small></span></h3>
@@ -220,8 +227,11 @@ h3{
 				<a style="color:rgb(0, 132, 255);"href="https://www.google.com/maps/place/Whitacre+Tower,+208+S+Akard+St,+Dallas,+TX+75201/@32.779561,-96.801078,17z/data=!3m1!4b1!4m5!3m4!1s0x864e9918ddd5d1c3:0xf783f2cfc79e0fb8!8m2!3d32.779561!4d-96.7988893">AT&T Headquarter, 208 S Akard St, Dallas, TX 75201</a>
 				</p>
 				<p>Data Analyzing using Python, VBA and Excel; 911 Service Management Team</p>
-				<p>Analyzing 911 Revenue data nation wide in order to understand 911 Revenue trend, Analyzing tech dispatch data to Public Safety Answering Point(PSAP) to explore the opportunities for reducing tech dispatch</p>
-				
+				<ul>
+					<li>Analyzing 911 Revenue data Nationwide to understand 911 Revenue Trend</li>
+					<li>Automating Data visualization and data gathering using SQL, Python, Excel, and VBA</li>
+					<li>Analyzing Tech Dispatch data to Public Safety Answering Point (PSAP) to explore the opportunities for reducing Tech Dispatch</li>
+				</ul>				
 			</div>
 			<div>
 				<h3><i style="color:powderblue;" class="far fa-edit"></i>Research Assistant <span><small style="color:#818181">May 2017-Dec 2018</small></span></h3>
