fix broken link

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 		<ul class="list-unstyled CTAs">
 			<li>
-				<a href="https://bootstrapious.com/tutorial/files/sidebar.zip" class="download">Pet Projects</a>
+				<a href="#" class="download">Pet Projects</a>
 			</li>
 			
 		</ul>
